--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,4 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+#goddardYYZ 2025
 print_info() {
     info title
     info underline
@@ -862,3 +861,7 @@ background_color=
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
+
+
+# See this wiki page for more info:
+# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
